# Accseal_zprize

./: CMakeLists.txt  README.md  build.sh
gpu-groth16-prover-3x/: .gitignore  CMakeLists.txt  cuda_prover_piecewise.cu  cuda_prover_piecewise_straus.cu
gpu-groth16-prover-3x/depends/libff/libff/: CMakeLists.txt
gpu-groth16-prover-3x/depends/libff/libff/algebra/curves/alt_bn128/: alt_bn128_g1.hpp  alt_bn128_g2.hpp
gpu-groth16-prover-3x/depends/libff/libff/algebra/curves/bls12_381/: bls12_381_fields.cpp  bls12_381_fields.hpp  bls12_381_g1.hpp  bls12_381_g2.hpp  bls12_381_pairing.cpp
gpu-groth16-prover-3x/depends/libff/libff/algebra/curves/mnt753/mnt4753/: mnt4753_g1.hpp  mnt4753_g2.hpp
gpu-groth16-prover-3x/depends/libff/libff/algebra/curves/mnt753/mnt6753/: mnt6753_g1.hpp  mnt6753_g2.hpp
gpu-groth16-prover-3x/libsnark/: CMakeLists.txt  generate_parameters.cpp  main.cpp  prover_reference_functions.cpp  serialization.hpp
gpu-groth16-prover-3x/libsnark/prover_reference_include/: prover_reference_functions.hpp
gpu-groth16-prover-3x/multiexp/: reduce.cu
gpu-msm-for-Zprize/: README.md  build.rs  cuda.rs  example-rust.rs
gpu-msm-for-Zprize/gzkp-demo-msm/: CMakeLists.txt  gzkp-msm.cu
gpu-msm-for-Zprize/gzkp-demo-msm/src/: msm.h
gpu-msm-for-Zprize/gzkp-demo-msm/src/ff/: arith.cuh  curves.cuh  fixnum.cuh
src/: common.h  file.h  msm.h  ntt.h  testlib.h
src/ff/: arith.cuh  curves.cuh  fixnum.cuh  primitives.cuh
src/ntt_const/: alt_bn128_const.h  bls12_381_const.h  mnt4753_const.h
test/: CMakeLists.txt  test_multiscalar.cu  test_ntt.cu
